--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   </head>
   <body>
     <header>
@@ -302,7 +303,37 @@
 
  <footer>
   <div class="footer">
-    
+    <div class="footer-content">
+      <div class="footer-about">
+        <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png" width="50">
+        <p style="margin-top: 10px;">Fivi Studio adalah perusahaan desain arsitektur dan interior sejak 2024, menghadirkan solusi inovatif dan estetis untuk hunian, kantor, serta ruang komersial. Kami berkomitmen menciptakan desain ruang yang fungsional, nyaman, dan sesuai kebutuhan Anda.</p>
+      </div>
+      <div class="footer-1">
+            <h4>KONTAK KAMI</h4>
+            <hr>
+            <p><i class="bi bi-telephone"></i> +62 822-5800-2550</p> 
+            <p><i class="bi bi-whatsapp"></i> +62 822-5800-2550</p> 
+            <p><i class="bi bi-envelope"></i> fivistudio@gmail.com</p>
+          
+          </div>
+          <div class="footer-2">
+            <h4>ALAMAT KAMI</h4>
+            <hr>
+            <div class="addres-content">
+              <div class="addres-1">
+                <p>Office dan Workshop 1</p>
+               <iframe style="width: 300px; height: 200px; background-color: aliceblue;"></iframe>
+               <p>Jl. Wijaya Kusuma Rt02/03 No.4, Kajen, Lebaksiu, Tegal Regency, Central Java 52461</p>
+              </div>
+              <div class="addres-2">
+                <p>Workshop 2</p>
+                <iframe style="width: 300px; height: 200px; background-color: aliceblue;"></iframe>
+                <p>Jl. Surya Barat, Kedoya Utara, Kec. Kb. Jeruk, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11520</p>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="cr" style="color: white; text-align: center;margin-top: 5px; font-size: 13px; padding-bottom: 4px">©2025 <span style="font-weight: bolder;">Fivi Studio</span>. All Rights Reserved.</div>
   </div>
   
  </footer>
