--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -74,9 +75,9 @@
     </div>
   </div>
 </nav>
-    </header>
+    </header >
 
-        <section class="hero-section text-white text-center position-relative">
+        <section class="hero-section text-white text-center position-relative fade show " >
             <div class="hero-overlay"></div>
             <div class="container position-relative py-5">
                 <h1 class="display-4 fw-bold">Desain Aja <br>Dulu<span style="color: #48D1CC !important;">.</span></h1>
@@ -86,7 +87,7 @@
 
             <!-- Running Text -->
             <div class="running-text text-white py-2 mt-5 text-uppercase fw-semibold">
-                <marquee behavior="scroll" direction="left">DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU &nbsp; • &nbsp; DESAIN AJA DULU</marquee>
+                <marquee behavior="scroll" direction="left">KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;• &nbsp; KONSULTASIKAN KEBUTUHANMU DENGAN KAMI GRATIS! &nbsp;</marquee>
             </div>
         </section>
 
@@ -94,12 +95,12 @@
    <section class="container custom-container my-5" style="position: relative;">
   <div class="row align-items-center g-4">
     <!-- Kolom Gambar -->
-    <div class="col-md-6">
-      <img src="/assets/image/27.jpg" alt="Interior" class="img-fluid rounded-3 shadow w-100">
+    <div class="col-md-6 fade-in"  data-aos="fade-right" data-aos-duration="800">
+      <img src="/assets/image/27.jpg" alt="Interior" class="img-fluid rounded-3 shadow w-100" loading="lazy">
     </div>
 
     <!-- Kolom Teks -->
-    <div class="col-md-6">
+    <div class="col-md-6" data-aos="fade-left" data-aos-duration="800">
       <h5 class="fw-bold text-white px-3 py-2 mb-3" style="background-color: #2c8481;">
         Desain Bukan Sekadar Tampilan, Tapi Pengalaman
       </h5>
@@ -119,7 +120,7 @@
   <h3 class="text-center mb-5">LAYANAN KAMI</h3>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 justify-content-center">
     <!-- Layanan 1 -->
-    <div class="col">
+    <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-1.jpg');">
         <div class="overlay">
           <h5 class="card-title">Desain Eksterior dan Interior (Hunian, Kantor, Cafe, Hotel)</h5>
@@ -128,7 +129,7 @@
     </div>
 
     <!-- Layanan 2 -->
-    <div class="col">
+    <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-2.jpg');">
         <div class="overlay">
           <h5 class="card-title">Konsultasi Desain dan Konsep</h5>
@@ -137,7 +138,7 @@
     </div>
 
     <!-- Layanan 3 -->
-    <div class="col">
+    <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-3.png');">
         <div class="overlay">
           <h5 class="card-title">3D Visualization dan Rendering</h5>
@@ -146,7 +147,7 @@
     </div>
 
     <!-- Layanan 4 -->
-    <div class="col">
+    <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-4.png');">
         <div class="overlay">
           <h5 class="card-title">Renovasi dan Pengoptimalan Tata Ruang</h5>
@@ -155,7 +156,7 @@
     </div>
 
     <!-- Layanan 5 -->
-    <div class="col">
+    <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-5.jpg');">
         <div class="overlay">
           <h5 class="card-title">Customize Furniture</h5>
@@ -175,7 +176,7 @@
 <section class="container my-5">
   <h3 class="text-center mb-5">PROJECT KAMI</h3>
    <div class="carousel">
-    <div class="carousel-track">
+    <div class="carousel-track" data-aos="fade-left" data-aos-duration="800">
       <!-- Gambar 1 -->
       <img src="/assets/element/lay-1.jpg" alt="Project 1" class="carousel-image">
       <!-- Gambar 2 -->
@@ -203,7 +204,7 @@
 <!-- Harga dan Layanan -->
 <section class="container my-5">
   <h3 class="text-center py-5">HARGA DAN LAYANAN</h3>
-  <div class="package-container">
+  <div class="package-container" data-aos="fade-up" data-aos-duration="800">
 
       <div class="package-box">
         <div class="package-tile">
@@ -285,7 +286,7 @@
 <!-- CTA Start -->
 
 <section class="container my-5">
-  <div class="cta-box container">
+  <div class="cta-box container" data-aos="fade-left" data-aos-duration="800">
     <div class="cta-box-1" >
       <h4>Masih bingung mulai dari mana?</h4>
       <h6>Kami siap bantu dari konsep hingga realisasi. Yuk konsultasi dulu!</h6>
@@ -322,12 +323,12 @@
             <div class="addres-content">
               <div class="addres-1">
                 <p>Office dan Workshop 1</p>
-               <iframe style="width: 300px; height: 200px; background-color: aliceblue;"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3959.779845592375!2d109.14338337499761!3d-7.035141892966784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zN8KwMDInMDYuNSJTIDEwOcKwMDgnNDUuNSJF!5e0!3m2!1sen!2sid!4v1748225079932!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                <p>Jl. Wijaya Kusuma Rt02/03 No.4, Kajen, Lebaksiu, Tegal Regency, Central Java 52461</p>
               </div>
               <div class="addres-2">
                 <p>Workshop 2</p>
-                <iframe style="width: 300px; height: 200px; background-color: aliceblue;"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3966.717113151326!2d106.76004017499!3d-6.168622293818676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMTAnMDcuMCJTIDEwNsKwNDUnNDUuNCJF!5e0!3m2!1sen!2sid!4v1748225137136!5m2!1sen!2sid" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p>Jl. Surya Barat, Kedoya Utara, Kec. Kb. Jeruk, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11520</p>
               </div>
             </div>
@@ -339,5 +340,9 @@
  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+  AOS.init();
+  </script>
   </body>
 </html>
