--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="nav-link text-info fw-semibold" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Tentang Kami</a>
+          <a class="nav-link text-info fw-semibold" href="about-us.html">Tentang Kami</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-info fw-semibold" href="#">Portofolio</a>
@@ -77,12 +77,18 @@
 </nav>
     </header >
 
-        <section class="hero-section text-white text-center position-relative fade show " >
+        <section class="hero-section text-white position-relative fade show "  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000">
             <div class="hero-overlay"></div>
-            <div class="container position-relative py-5">
-                <h1 class="display-4 fw-bold">Desain Aja <br>Dulu<span style="color: #48D1CC !important;">.</span></h1>
+            <div class="container position-relative py-5 header-container">
+              <div class="header-text">
+                <h1 class="display-4 fw-bold">Desain Aja Dulu<span style="color: #48D1CC !important;">.</span></h1>
                 <p class="lead fw-semibold mt-3">HUNIAN • KANTOR • CAFE • HOTEL</p>
                 <a href="#kontak" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
+              </div>
+              <div class="header-logo">
+                <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png">
+              </div>
+                
             </div>
 
             <!-- Running Text -->
@@ -92,7 +98,8 @@
         </section>
 
 
-   <section class="container custom-container my-5" style="position: relative;">
+   <section class="container custom-container my-5" style="position: relative;">  
+
   <div class="row align-items-center g-4">
     <!-- Kolom Gambar -->
     <div class="col-md-6 fade-in"  data-aos="fade-right" data-aos-duration="800">
@@ -102,7 +109,7 @@
     <!-- Kolom Teks -->
     <div class="col-md-6" data-aos="fade-left" data-aos-duration="800">
       <h5 class="fw-bold text-white px-3 py-2 mb-3" style="background-color: #2c8481;">
-        Desain Bukan Sekadar Tampilan, Tapi Pengalaman
+        Bangun imajinasimu jadi lebih nyata
       </h5>
       <p style="text-align: justify;">
         <span class="fw-bold" style="color: #48D1CC;">Fivi Studio</span> merupakan perusahaan yang bergerak di bidang desain
@@ -113,6 +120,7 @@
       </p>
     </div>
   </div>
+  
 </section>
   
 
@@ -123,7 +131,7 @@
     <div class="col" data-aos="fade-up" data-aos-duration="800">
       <div class="service-card" style="background-image: url('/assets/element/lay-1.jpg');">
         <div class="overlay">
-          <h5 class="card-title">Desain Eksterior dan Interior (Hunian, Kantor, Cafe, Hotel)</h5>
+          <h5 class="card-title">Desain Eksterior dan Interior</h5>
         </div>
       </div>
     </div>
@@ -178,25 +186,25 @@
    <div class="carousel">
     <div class="carousel-track" data-aos="fade-left" data-aos-duration="800">
       <!-- Gambar 1 -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 1" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 1" class="carousel-image"loading="lazy">
       <!-- Gambar 2 -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 2" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 2" class="carousel-image"loading="lazy">
       <!-- Gambar 3 -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 3" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 3" class="carousel-image"loading="lazy">
       <!-- Gambar 4 -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 4" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 4" class="carousel-image"loading="lazy">
       <!-- Gambar 5 -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 5" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 5" class="carousel-image"loading="lazy">
       
       <!-- Mengulang gambar untuk efek looping -->
-      <img src="/assets/element/lay-1.jpg" alt="Project 1" class="carousel-image">
-      <img src="/assets/element/lay-1.jpg" alt="Project 2" class="carousel-image">
-      <img src="/assets/element/lay-1.jpg" alt="Project 3" class="carousel-image">
-      <img src="/assets/element/lay-1.jpg" alt="Project 4" class="carousel-image">
-      <img src="/assets/element/lay-1.jpg" alt="Project 5" class="carousel-image">
+      <img src="/assets/element/lay-1.jpg" alt="Project 1" class="carousel-image"loading="lazy">
+      <img src="/assets/element/lay-1.jpg" alt="Project 2" class="carousel-image"loading="lazy">
+      <img src="/assets/element/lay-1.jpg" alt="Project 3" class="carousel-image"loading="lazy">
+      <img src="/assets/element/lay-1.jpg" alt="Project 4" class="carousel-image"loading="lazy">
+      <img src="/assets/element/lay-1.jpg" alt="Project 5" class="carousel-image"loading="lazy">
     </div>
   <div class="text-center mt-5">
-    <a href="#" style="color: #287A77; text-decoration: none;"">Lihat Selengkapnya..</a>
+    <a href="#" style="color: #287A77; text-decoration: none;">Lihat Selengkapnya..</a>
   </div>
 </section>
 <!-- Project Slideshow End -->
@@ -204,9 +212,9 @@
 <!-- Harga dan Layanan -->
 <section class="container my-5">
   <h3 class="text-center py-5">HARGA DAN LAYANAN</h3>
-  <div class="package-container" data-aos="fade-up" data-aos-duration="800">
+  <div class="package-container" >
 
-      <div class="package-box">
+      <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
           <h6  class="py-3" >PAKET BASIC</h3>
         </div>
@@ -224,7 +232,7 @@
         </div>
       </div>
 
-      <div class="package-box">
+      <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
           <h6  class="py-3" >PAKET BASIC</h3>
         </div>
@@ -242,7 +250,7 @@
         </div>
       </div>
 
-      <div class="package-box">
+      <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
           <h6  class="py-3" >PAKET BASIC</h3>
         </div>
@@ -260,7 +268,7 @@
         </div>
       </div>
 
-      <div class="package-box">
+      <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
           <h6  class="py-3" >PAKET BASIC</h3>
         </div>
