--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/assets/logo/favicon.ico" type="image/x-icon">
     <!-- Title Tag -->
     <title>Fivi Studio - Jasa Desain Interior & Arsitektur Profesional</title>
 
