--- a/about-us.html
+++ b/about-us.html
@@ -39,10 +39,10 @@
   </head>
   <body>
     <header>
-       <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3 fixed-top">
+      <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3 fixed-top">
   <div class="container">
     <!-- Logo -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/index.html">
       <img src="./assets/logo/FiviLogo-Tosca-Studio-Bawah-2.png" alt="Logo" width="60">
     </a>
 
@@ -55,21 +55,22 @@
     <div class="collapse navbar-collapse justify-content-between custom-navbar" id="navbarContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Home</a>
+          <a class="nav-link text-info fw-semibold" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-info fw-semibold" href="#">Tentang Kami</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Portofolio</a>
+          <a class="nav-link text-info fw-semibold" href="/portofolio.html">Portofolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Harga dan Layanan</a>
+          <a class="nav-link text-info fw-semibold" href="/index.html#pricing">Harga dan Layanan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Kontak</a>
+          <a class="nav-link text-info fw-semibold" href="#footer">Kontak</a>
         </li>
       </ul>
+
       <!-- CTA Button -->
       <a href="#kontak" class="btn btn-info text-white fw-semibold px-4">Kontak Kami</a>
     </div>
@@ -101,25 +102,25 @@
   <div class="container my-5 ">
     <h3 class="text-center">TENTANG KAMI</h3>
     <div class="about-us-container">
-      <div class="about-us-text">
+      <div class="about-us-text" data-aos="fade-right" data-aos-duration="800" >
         <h6 style="font-weight: 400;">Fivi Studio adalah perusahaan yang bergerak di bidang desain arsitektur dan interior sejak tahun 2024, dengan fokus menghadirkan solusi desain yang inovatif, fungsional, dan estetik. Kami melayani berbagai kebutuhan desain mulai dari hunian pribadi, apartemen, perkantoran, hingga ruang komersial seperti kafe, butik, dan hotel. Setiap proyek kami kerjakan dengan pendekatan personal, menyesuaikan dengan kebutuhan, gaya hidup, serta karakter unik dari setiap klien.</h6>
          
         <h6 style="font-weight: 400;">Didukung oleh tim profesional yang berpengalaman di bidangnya, kami juga menyediakan layanan 3D visualization dan custom furniture agar hasil desain sesuai ekspektasi sejak awal. Fivi Studio berkomitmen menciptakan ruang yang tidak hanya menarik secara visual, tetapi juga nyaman, efisien, dan berkarakter. Dengan proses kerja yang transparan, komunikasi terbuka, dan ketepatan waktu, kami hadir sebagai mitra andal dalam mewujudkan ruang impian Anda.</h6>
       </div>
-      <div class="about-us-image">
+      <div class="about-us-image" data-aos="fade-left" data-aos-duration="800" >
         <img src="/assets/image/hero-1.svg" width="400">
       </div>
     </div>
   </div>
 
-  <div class="visi-misi my-5"  >
+  <div class="visi-misi my-5" data-aos="fade-down" data-aos-duration="800" >
     <div class="container visi-misi-container py-5">
-      <div class="visi">
+      <div class="visi" data-aos="fade-right" data-aos-duration="800">
         <h4>Visi</h4>
         <h6>Menjadi penyedia jasa design arsitektur dan interior yang inovatif,
 fungsional, dan estetik dengan mengedepankan kepuasan customer</h6>
       </div>
-      <div class="misi">
+      <div class="misi" data-aos="fade-left" data-aos-duration="800">
         <h4>Misi</h4>
         <ul>
           <li><h6>Menghadirkan desain yang menggabungkan estetika,
@@ -214,7 +215,7 @@ fungsional, dan estetik dengan mengedepankan kepuasan customer</h6>
  <!-- CTA End -->
 
  <footer>
-  <div class="footer">
+  <div class="footer" id="footer">
     <div class="footer-content">
       <div class="footer-about">
         <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png" width="50">
