--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3 fixed-top">
   <div class="container">
     <!-- Logo -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/index.html">
       <img src="./assets/logo/FiviLogo-Tosca-Studio-Bawah-2.png" alt="Logo" width="60">
     </a>
 
@@ -61,13 +61,13 @@
           <a class="nav-link text-info fw-semibold" href="about-us.html">Tentang Kami</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Portofolio</a>
+          <a class="nav-link text-info fw-semibold" href="/portofolio.html  ">Portofolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Harga dan Layanan</a>
+          <a class="nav-link text-info fw-semibold" href="#pricing">Harga dan Layanan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-info fw-semibold" href="#">Kontak</a>
+          <a class="nav-link text-info fw-semibold" href="#footer">Kontak</a>
         </li>
       </ul>
 
@@ -211,7 +211,7 @@
 <!-- Project Slideshow End -->
 
 <!-- Harga dan Layanan -->
-<section class="container my-5">
+<section class="container my-5" id="pricing">
   <h3 class="text-center py-5">HARGA DAN LAYANAN</h3>
   <div class="package-container" >
 
@@ -312,7 +312,7 @@
  <!-- CTA End -->
 
  <footer>
-  <div class="footer">
+  <div class="footer" id="footer">
     <div class="footer-content">
       <div class="footer-about">
         <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png" width="50">
