--- a/portofolio.html
+++ b/portofolio.html
@@ -102,12 +102,12 @@
             <h3 class="text-center py-5">PORTOFOLIO KAMI</h3>
           <div class="container text-center py-5">
     <div class="mb-4">
-      <button class="btn filter-btn active-filter" data-filter="all">All</button>
-      <button class="btn filter-btn" data-filter="commercial">Commercial</button>
-      <button class="btn filter-btn" data-filter="eksterior">Eksterior</button>
-      <button class="btn filter-btn" data-filter="furniture">Furniture</button>
-      <button class="btn filter-btn" data-filter="home_interior">Home Interior</button>
-      <button class="btn filter-btn" data-filter="office">Office</button>
+      <button type="button" class="btn filter-btn active-filter" data-filter="all">All</button>
+      <button type="button" class="btn filter-btn" data-filter="commercial">Commercial</button>
+      <button type="button" class="btn filter-btn" data-filter="eksterior">Eksterior</button>
+      <button type="button" class="btn filter-btn" data-filter="furniture">Furniture</button>
+      <button type="button" class="btn filter-btn" data-filter="home_interior">Home Interior</button>
+      <button type="button" class="btn filter-btn" data-filter="office">Office</button>
     </div>
 
     <div class="row g-4">
