--- a/portofolio.html
+++ b/portofolio.html
@@ -72,7 +72,7 @@
       </ul>
 
       <!-- CTA Button -->
-      <a href="#kontak" class="btn btn-info text-white fw-semibold px-4">Kontak Kami</a>
+      <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn btn-info text-white fw-semibold px-4">Kontak Kami</a>
     </div>
   </div>
 </nav>
@@ -84,7 +84,7 @@
               <div class="header-text">
                 <h1 class="display-4 fw-bold">Desain Aja Dulu<span style="color: #48D1CC !important;">.</span></h1>
                 <p class="lead fw-semibold mt-3">HUNIAN • KANTOR • CAFE • HOTEL</p>
-                <a href="#kontak" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
+                <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
               </div>
               <div class="header-logo">
                 <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png">
@@ -98,7 +98,7 @@
             </div>
         </section>
 
-        <div class="container">
+        <div class="container" id="catalog">
             <h3 class="text-center py-5">PORTOFOLIO KAMI</h3>
           <div class="container text-center py-5">
     <div class="mb-4">
@@ -314,13 +314,13 @@
           </ul>
         </div>
         <div class="package-button">
-          <a href="#">Pilih Paket</a>
+          <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20tertarik%20dengan%20Paket%20Basic%20dan%20ingin%20konsultasi%20lebih%20lanjut." target="_blank">Pilih Paket</a>
         </div>
       </div>
 
       <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
-          <h6  class="py-3" >PAKET BASIC</h3>
+          <h6  class="py-3" >PAKET STANDARD</h3>
         </div>
         <div class="package-detail py-3" >
           <ul>
@@ -332,13 +332,13 @@
           </ul>
         </div>
         <div class="package-button">
-          <a href="#">Pilih Paket</a>
+          <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20terkait%20Paket%20Standard." target="_blank">Pilih Paket</a>
         </div>
       </div>
 
       <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
-          <h6  class="py-3" >PAKET BASIC</h3>
+          <h6  class="py-3" >PAKET PREMIUM</h3>
         </div>
         <div class="package-detail py-3" >
           <ul>
@@ -350,13 +350,13 @@
           </ul>
         </div>
         <div class="package-button">
-          <a href="#">Pilih Paket</a>
+          <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20berminat%20dengan%20Paket%20Premium%20dan%20ingin%20tahu%20lebih%20lanjut." target="_blank">Pilih Paket</a>
         </div>
       </div>
 
       <div class="package-box" data-aos="fade-up" data-aos-duration="800">
         <div class="package-tile">
-          <h6  class="py-3" >PAKET BASIC</h3>
+          <h6  class="py-3" >PAKET ELITE</h3>
         </div>
         <div class="package-detail py-3" >
           <ul>
@@ -368,7 +368,7 @@
           </ul>
         </div>
         <div class="package-button">
-          <a href="#">Pilih Paket</a>
+          <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20tertarik%20dengan%20Paket%20Elit.%20Boleh%20minta%20informasi%20lengkapnya%3F" target="_blank">Pilih Paket</a>
         </div>
       </div>
   </div>
@@ -396,7 +396,7 @@
 </section>
  <!-- CTA End -->
 
- <footer>
+<footer>
   <div class="footer" id="footer">
     <div class="footer-content">
       <div class="footer-about">
@@ -406,9 +406,9 @@
       <div class="footer-1">
             <h4>KONTAK KAMI</h4>
             <hr>
-            <p><i class="bi bi-telephone"></i> +62 822-5800-2550</p> 
-            <p><i class="bi bi-whatsapp"></i> +62 822-5800-2550</p> 
-            <p><i class="bi bi-envelope"></i> fivistudio@gmail.com</p>
+            <p><i class="bi bi-telephone"></i><a href="tel:+6282258002550" style="text-decoration: none; color: white;"> +62 822-5800-2550</a></p> 
+            <p><i class="bi bi-whatsapp"></i> <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank"  style="text-decoration: none; color: white;"> +62 822-5800-2550</a></p> 
+            <p><i class="bi bi-envelope"></i> <a href="mailto:fivistudio@gmail.com" style="text-decoration: none; color: white;"> fivistudio@gmail.com </a></p>
           
           </div>
           <div class="footer-2">
