--- a/about-us.html
+++ b/about-us.html
@@ -72,7 +72,7 @@
       </ul>
 
       <!-- CTA Button -->
-      <a href="#kontak" class="btn btn-info text-white fw-semibold px-4">Kontak Kami</a>
+      <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn btn-info text-white fw-semibold px-4">Kontak Kami</a>
     </div>
   </div>
 </nav>
@@ -84,7 +84,7 @@
               <div class="header-text">
                 <h1 class="display-4 fw-bold">Desain Aja Dulu<span style="color: #48D1CC !important;">.</span></h1>
                 <p class="lead fw-semibold mt-3">HUNIAN • KANTOR • CAFE • HOTEL</p>
-                <a href="#kontak" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
+                <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
               </div>
               <div class="header-logo">
                 <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png">
@@ -214,7 +214,7 @@ fungsional, dan estetik dengan mengedepankan kepuasan customer</h6>
 </section>
  <!-- CTA End -->
 
- <footer>
+<footer>
   <div class="footer" id="footer">
     <div class="footer-content">
       <div class="footer-about">
@@ -224,9 +224,9 @@ fungsional, dan estetik dengan mengedepankan kepuasan customer</h6>
       <div class="footer-1">
             <h4>KONTAK KAMI</h4>
             <hr>
-            <p><i class="bi bi-telephone"></i> +62 822-5800-2550</p> 
-            <p><i class="bi bi-whatsapp"></i> +62 822-5800-2550</p> 
-            <p><i class="bi bi-envelope"></i> fivistudio@gmail.com</p>
+            <p><i class="bi bi-telephone"></i><a href="tel:+6282258002550" style="text-decoration: none; color: white;"> +62 822-5800-2550</a></p> 
+            <p><i class="bi bi-whatsapp"></i> <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank"  style="text-decoration: none; color: white;"> +62 822-5800-2550</a></p> 
+            <p><i class="bi bi-envelope"></i> <a href="mailto:fivistudio@gmail.com" style="text-decoration: none; color: white;"> fivistudio@gmail.com </a></p>
           
           </div>
           <div class="footer-2">
