--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
 
     <!-- Meta Keywords (optional, meskipun tidak lagi jadi faktor SEO utama) -->
     <meta name="keywords" content="desain interior, arsitektur, jasa desain rumah, desain kantor, desain cafe, desain hotel, renovasi interior, visualisasi 3D, custom furniture, Fivi Studio">
-
+     <link rel="canonical" href="https://www.fivistudio.id/about-us.html">
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="Fivi Studio - Desain Interior & Arsitektur">
     <meta property="og:description" content="Kami menghadirkan solusi desain arsitektur dan interior yang inovatif, fungsional, dan estetik untuk hunian, kantor, cafe, hingga hotel.">
@@ -202,7 +202,7 @@ fungsional, dan estetik dengan mengedepankan kepuasan customer</h6>
     <div class="cta-box-1" >
       <h4>Masih bingung mulai dari mana?</h4>
       <h6>Kami siap bantu dari konsep hingga realisasi. Yuk konsultasi dulu!</h6>
-      <a href="#kontak" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
+      <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
     </div>
     <div class="cta-box-2" style="width: 40%;">
       <div class="">
