--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- Meta Keywords (optional, meskipun tidak lagi jadi faktor SEO utama) -->
     <meta name="keywords" content="desain interior, arsitektur, jasa desain rumah, desain kantor, desain cafe, desain hotel, renovasi interior, visualisasi 3D, custom furniture, Fivi Studio">
+    
+    <link rel="canonical" href="https://www.fivistudio.id/">
 
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="Fivi Studio - Desain Interior & Arsitektur">
@@ -104,7 +106,7 @@
   <div class="row align-items-center g-4">
     <!-- Kolom Gambar -->
     <div class="col-md-6 fade-in"  data-aos="fade-right" data-aos-duration="800">
-      <img src="/assets/image/27.jpg" alt="Interior" class="img-fluid rounded-3 shadow w-100" loading="lazy">
+      <img src="/assets/image/27.jpg" alt="Interior" class="img-fluid rounded-3 shadow w-100" loading="lazy" >
     </div>
 
     <!-- Kolom Teks -->
@@ -299,7 +301,7 @@
     <div class="cta-box-1" >
       <h4>Masih bingung mulai dari mana?</h4>
       <h6>Kami siap bantu dari konsep hingga realisasi. Yuk konsultasi dulu!</h6>
-      <a href="#kontak" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
+      <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
     </div>
     <div class="cta-box-2" style="width: 40%;">
       <div class="">
