--- a/about-us.html
+++ b/about-us.html
@@ -76,7 +76,7 @@
     </div>
   </div>
 </nav>
-    </header >
+    </header style="overflow-x: hidden;">
 
         <section class="hero-section text-white position-relative fade show "  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000">
             <div class="hero-overlay"></div>
