--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header style="overflow-x: hidden;">
-       <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3 fixed-top">
+       <nav class="navbar navbar-expand-lg bg-white shadow-sm py-3 fixed-top" style="width: 100vw;">
   <div class="container">
     <!-- Logo -->
     <a class="navbar-brand" href="/index.html">
