--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="Fivi Studio - Desain Interior & Arsitektur">
     <meta property="og:description" content="Kami menghadirkan solusi desain arsitektur dan interior yang inovatif, fungsional, dan estetik untuk hunian, kantor, cafe, hingga hotel.">
-    <meta property="og:image" content="https://fivistudio.com/assets/logo/FiviLogo-Tosca-Studio-Bawah.png"> <!-- Ganti dengan URL gambar Anda -->
+    <meta property="og:image" content="https://fivistudio.com/assets/logo/FiviLogo-Tosca-Studio-Bawah.png"> 
     <meta property="og:url" content="https://fivistudio.id">
     <meta property="og:type" content="website">
 
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Fivi Studio - Desain Interior & Arsitektur">
     <meta name="twitter:description" content="Solusi desain hunian, kantor, cafe, hingga hotel. Inovatif, fungsional, dan sesuai kebutuhan Anda.">
-    <meta name="twitter:image" content="https://fivistudio.com/assets/logo/FiviLogo-Tosca-Studio-Bawah.png"> <!-- Ganti dengan URL gambar Anda -->
+    <meta name="twitter:image" content="https://fivistudio.com/assets/logo/FiviLogo-Tosca-Studio-Bawah.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/stylesheet.css">
@@ -82,12 +82,12 @@
             <div class="hero-overlay"></div>
             <div class="container position-relative py-5 header-container">
               <div class="header-text">
-                <h1 class="display-4 fw-bold">Desain Aja Dulu<span style="color: #48D1CC !important;">.</span></h1>
+                <h1 class="display-4 fw-bold">Desain Dulu Aja<span style="color: #48D1CC !important;">.</span></h1>
                 <p class="lead fw-semibold mt-3">HUNIAN • KANTOR • CAFE • HOTEL</p>
                 <a href="https://wa.me/6282258002550?text=Halo%20Fivi%20Studio%2C%20saya%20ingin%20konsultasi%20mengenai%20desain%20interior%20%26%20arsitektur." target="_blank" class="btn text-white fw-semibold mt-4 px-4 py-2" style="background-color:#48D1CC  ;">Konsultasi Gratis Sekarang</a>
               </div>
               <div class="header-logo">
-                <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png">
+                <img src="/assets/logo/FiviLogo-Studio-White-Below-1.png" style="width: 55%;">
               </div>
                 
             </div>
